epic-gantt-chart/force-app/main/default/objects/Project_Stage__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <label>Display Order</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Controls the row order of this stage in the Gantt chart. Stages without a value sort last, by Start Date.</description>
</CustomField>