epic-gantt-chart/force-app/main/default/objects/Project_Stage__c/fields/Epic__c.field-meta.xml
<CustomField>
    <fullName>Epic__c</fullName>
    <label>Epic</label>
    <type>MasterDetail</type>
    <referenceTo>Epic__c</referenceTo>
    <relationshipLabel>Project Stages</relationshipLabel>
    <relationshipName>Project_Stages</relationshipName>
</CustomField>