epic-gantt-chart/force-app/main/default/objects/Project_Stage__c/fields/Stage_Owner__c.field-meta.xml
<CustomField>
    <fullName>Stage_Owner__c</fullName>
    <label>Stage Owner</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>