epic-gantt-chart/force-app/main/default/objects/Project_Stage__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <label>System</label>
    <type>Text</type>
    <length>255</length>
    <defaultValue>"Salesforce"</defaultValue>
</CustomField>