epic-gantt-chart/force-app/main/default/objects/Project_Stage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <label>All Project Stages</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Epic__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Stage_Owner__c</columns>
</ListView>